[tool.poetry]
name = "loctocat"
version = "0.1.0"
description = ""
authors = ["celsius narhwal <celsius@celsiusnarhwal.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
oauthlib = "^3.2.2"
halo = "^0.0.31"
termcolor = "^2.1.1"
aiohttp = "^3.8.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
