[tool.poetry]
name = "loctocat"
version = "1.0.0"
description = "Simple yet flexible OAuth 2.0 device flow authentication for Python"
authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/celsiusnarhwal/loctocat"
include = ["README.md", "LICENSE.md"]
keywords = ["oauth", "oauth2", "authentication", "device-flow", "asyncio"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
oauthlib = "^3.2.2"
halo = "^0.0.31"
termcolor = "^2.1.1"
aiohttp = "^3.8.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
